esp8266-nowplaying/base/deployment.yml
---
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "esp8266-nowplaying"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "esp8266-nowplaying"
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "esp8266-nowplaying"
    spec:
      containers:
        - name: "esp8266-nowplaying"
          image: "guppy0130/esp8266-nowplaying:latest"
          ports:
            - containerPort: 3000
              name: "esp8266-nowplay"
              protocol: "TCP"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: 3000
              scheme: "HTTP"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: 3000
              scheme: "HTTP"
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "250m"
              memory: "125Mi"
          volumeMounts:
            - mountPath: "/app/.spotify-cache"
              name: "esp8266-nowplaying-spotify-cache"
      volumes:
        - name: "esp8266-nowplaying-spotify-cache"
          persistentVolumeClaim:
            claimName: "esp8266-nowplaying-spotify-cache"
