esp8266-nowplaying/base/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "esp8266-nowplaying"
spec:
  rules:
    - host: "esp8266-nowplaying.k3s.home"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "esp8266-nowplaying"
                port:
                  name: "esp8266-nowplay"
